--- a/front-end/views/cabecalho.ejs
+++ b/front-end/views/cabecalho.ejs
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <div class="col-2 d-flex justify-content-start"></div>
       <div class="col-8 d-flex justify-content-center ">
-        <a class="navbarubrand tPrincipal fonte d-none d-sm-block" href="#">ChatBot de Suporte</a>
+        <a class="navbarubrand tPrincipal logo d-none d-sm-block" href="#">ChatBot de Suporte</a>
       </div>
       <div class="col-2 d-flex justify-content-end">
         <a href="/"><i class="material-icons icone btnHover">home</i></a>
