--- a/front-end/views/cadTexto.ejs
+++ b/front-end/views/cadTexto.ejs
@@ -29,4 +29,21 @@
         </div>
       </div>
   </div>
+
+  <% if(alertaCadastro == 'ok'){%>
+    <div class=" alert alert-success alert-dismissible fade show alertaTreinamento" id="alertaOk"
+      role="alert">
+      Operação realizada com sucesso!
+      <button type="button" class="btn-close" data-bs-dismiss="alert"
+        aria-label="Close"></button>
+    </div>
+  <% }else if(alertaCadastro == 'erro'){%>
+    <div class=" alert alert-danger alert-dismissible fade show alertaTreinamento" id="alertaErro"
+      role="alert">
+      Ocorreu um erro, tente novamente mais tarde!
+      <button type="button" class="btn-close" data-bs-dismiss="alert"
+        aria-label="Close"></button>
+    </div>
+
+  <% }%>
   <%- include('rodape'); %>
