--- a/front-end/views/conversasCadastradas.ejs
+++ b/front-end/views/conversasCadastradas.ejs
@@ -20,23 +20,40 @@
 						</div>
 						<hr />
 						<div class="tabela2">
-
-							<% for(let item of dados){%>
-								<div class="row mb-3" id="resposta_<%= item.id_resposta %>">
-									<div class="col-sm-5 text-break info-cadastradas">
-										<%= item.pergunta %>
-									</div>
-									<div class="col-sm-5 text-break info-cadastradas">
-										<%= item.resposta %>
-									</div>
-									<div class="col-sm-2 mt-2 d-flex justify-content-between">
-										<i class=" text-danger material-icons"
-											onclick="deletarInformacao(<%= item.id_resposta%>)">delete</i>
-										<i class="text-success material-icons"
-											onclick="editarInformacao(<%= item.id_pergunta %>, <%= item.id_resposta %>,'<%= item.pergunta %>', '<%= item.resposta %>')">edit</i>
-									</div>
+							<% if(alertaDelete== 'ok'){%>
+								<div class="alert alert-success alert-dismissible fade show alertaConversas" id="alertaOk"
+									role="alert">
+									Operação realizada com sucesso!
+									<button type="button" class="btn-close" data-bs-dismiss="alert"
+										aria-label="Close"></button>
 								</div>
-								<% } %>
+							<% }else if(alertaDelete == 'erro'){%>
+								<div class="alert alert-danger alert-dismissible fade show alertaConversas" id="alertaErro"
+									role="alert">
+									Ocorreu um erro, tente novamente mais tarde!
+									<button type="button" class="btn-close" data-bs-dismiss="alert"
+										aria-label="Close"></button>
+								</div>
+
+							<% }%>
+
+									<% for(let item of dados){%>
+										<div class="row mb-3" id="resposta_<%= item.id_resposta %>">
+											<div class="col-sm-5 text-break info-cadastradas">
+												<%= item.pergunta %>
+											</div>
+											<div class="col-sm-5 text-break info-cadastradas">
+												<%= item.resposta %>
+											</div>
+											<div class="col-sm-2 mt-2 d-flex justify-content-between">
+												<i class=" text-danger material-icons"
+													onclick="deletarInformacao(<%= item.id_resposta%>)">delete</i>
+												<i class="text-success material-icons"
+													onclick="editarInformacao(<%= item.id_pergunta %>, <%= item.id_resposta %>,'<%= item.pergunta %>', '<%= item.resposta %>')">edit</i>
+											</div>
+										</div>
+										<% } %>
+
 						</div>
 
 					</div>
