--- a/front-end/views/treinamento.ejs
+++ b/front-end/views/treinamento.ejs
@@ -29,6 +29,7 @@
           </div>
 
           <div class="row justify-content-end mt-5">
+            
             <div class="mx-5 col-sm-2">
               <!-- Button trigger modal -->
               <button type="button" class="w-75 btnDelete" data-bs-toggle="modal" data-bs-target="#deletetreinamento">
@@ -41,26 +42,26 @@
   </div>
 
   <div class="d-md-flex justify-content-center ">
-
+    
     <div class="col-md-4">
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Treinar Robô</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Deseja treinar o Robô?</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0"
-                  aria-valuemax="100">25%</div>
+            <div class="modal-body" id="carregar">
+              <div class="d-flex align-items-center">
+                <strong>Treinando...</strong>
+                <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
               <form action="/treinar-robo" method="POST">
-                <button type="submit" class="btn btn-primary">Treinar</button>
+                <button type="submit" onclick="displayCarregar()"  class="btn btn-primary">Sim</button>
               </form>
             </div>
           </div>
@@ -83,7 +84,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-              <form action="/deletar_treinamento" method="POST">
+              <form action="/excluir-treinamento" method="POST">
                 <button type="submit" class="btn btn-primary">Excluir</button>
               </form>
             </div>
@@ -92,4 +93,21 @@
       </div>
     </div>
   </div>
+
+  <% if(alertaTreinamento== 'ok'){%>
+    <div class=" alert alert-success alert-dismissible fade show alertaTreinamento" id="alertaOk"
+      role="alert">
+      Operação realizada com sucesso!
+      <button type="button" class="btn-close" data-bs-dismiss="alert"
+        aria-label="Close"></button>
+    </div>
+  <% }else if(alertaTreinamento == 'erro'){%>
+    <div class=" alert alert-danger alert-dismissible fade show alertaTreinamento" id="alertaErro"
+      role="alert">
+      Ocorreu um erro, tente novamente mais tarde!
+      <button type="button" class="btn-close" data-bs-dismiss="alert"
+        aria-label="Close"></button>
+    </div>
+
+  <% }%>
   <%- include('rodape'); %>
