--- a/front-end/views/cabecalho.ejs
+++ b/front-end/views/cabecalho.ejs
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de perguntas e respostas</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/css/estilo2.css">
-	
   <link rel="stylesheet" href="/bootstrap-5.1.3/bootstrap.min.css">
   <link rel="stylesheet" href="/css/estilo.css">
 </head>
@@ -18,7 +16,7 @@
     <div class="container-fluid">
       <div class="col-2 d-flex justify-content-start"></div>
       <div class="col-8 d-flex justify-content-center ">
-        <a class="navbarubrand tPrincipal logo d-none d-sm-block" href="#">ChatBot de Suporte</a>
+        <a class="navbarubrand tPrincipal logo" href="/">ChatBot de Suporte</a>
       </div>
       <div class="col-2 d-flex justify-content-end">
         <a href="/"><i class="material-icons icone btnHover">home</i></a>
