--- a/front-end/views/cadTexto.ejs
+++ b/front-end/views/cadTexto.ejs
@@ -1,49 +1,79 @@
 <%- include('cabecalho'); %>
   <div class="row pagina">
-    <%- include('menuLateral'); %>
+    <div class="col-md-3 menu g-0">
+      <ul class="list-group">
 
-      <div class="col-md-9">
-        <div class="container">
+        <li class="list-group-item menu pt-3 pb-3">
+          <a class="tLateral d-flex align-items-center" href="/">
+            <i class="material-icons pe-2">home</i>HOME
+          </a>
+        </li>
 
-          <div class="row">
-            <h2 class="mt-4 titulo2">Cadastro de perguntas e respostas em texto</h2>
-          </div>
+        <li class="tLateral list-group-item menu pt-3 pb-3 d-flex align-items-center">
+          <i class="material-icons pe-2">computer</i>CADASTROS
+        </li>
 
-          <div class="row mb-3 d-flex justify-content-center">
-            <div class="col-md-8 mt-5">
-              <form method="POST" action="/cadastrar-texto">
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Informe a pergunta</label>
-                  <input type="text" name="perguntas" class="form-control" id="perguntas">
-                </div>
-                <div class="mb-3 mt-3">
-                  <label for="exampleInputEmail1" class="form-label">Informe a resposta</label>
-                  <input type="text" name="resposta" class="form-control" id="resposta" aria-describedby="emailHelp">
-                </div>
+        <li class="list-group-item menu ativo pt-3 pb-3 ps-5">
+          <a class="tLateral d-flex align-items-center activoTexto" href="/cad-texto">
+            <i class="material-icons pe-2">subject</i>Mensagens de Texto
+          </a>
+        </li>
 
-                <button type="submit" class="btn btn-primary">Gravar</button>
-              </form>
-            </div>
+        <li class="list-group-item menu pt-3 pb-3 ps-5">
+          <a class="tLateral d-flex align-items-center" href="/cad-midia">
+            <i class="material-icons pe-2">perm_media</i> Mensagens de Midias
+          </a>
+        </li>
+    
+        <li class="list-group-item menu pt-3 pb-3">
+          <a class="tLateral d-flex align-items-center" href="/conversas-cadastradas">
+            <i class="material-icons pe-2">info</i>INFORMAÇÕES CADASTRADAS
+          </a>
+        </li>
+        <li class="list-group-item menu pt-3 pb-3">
+          <a class="tLateral d-flex align-items-center" href="/treinar-robo">
+            <i class="material-icons pe-2">smart_toy</i>TREINAR ROBÔ
+          </a>
+        </li>
+      </ul>
+    </div>
 
+    <div class="col-md-9">
+      <div class="container">
+        <div class="row">
+          <h2 class="mt-4 titulo2">Cadastro de perguntas e respostas em texto</h2>
+        </div>
+        <div class="row mb-3 d-flex justify-content-center">
+          <div class="col-md-8 mt-5">
+            <form method="POST" action="/cadastrar-texto">
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Informe a pergunta</label>
+                <input type="text" name="perguntas" class="form-control" id="perguntas" required>
+              </div>
+
+              <div class="mb-3 mt-3">
+                <label for="exampleInputEmail1" class="form-label">Informe a resposta</label>
+                <input type="text" name="resposta" class="form-control" id="resposta"  required>
+              </div>
+
+              <button type="submit" class="btn btn-primary">Gravar</button>
+            </form>
           </div>
         </div>
       </div>
+    </div>
   </div>
 
   <% if(alertaCadastro == 'ok'){%>
-    <div class=" alert alert-success alert-dismissible fade show alertaTreinamento" id="alertaOk"
-      role="alert">
+    <div class=" alert alert-success alert-dismissible fade show alertaTreinamento" id="alertaOk"role="alert">
       Operação realizada com sucesso!
-      <button type="button" class="btn-close" data-bs-dismiss="alert"
-        aria-label="Close"></button>
+      <button type="button" class="btn-close" data-bs-dismiss="alert"aria-label="Close"></button>
     </div>
-  <% }else if(alertaCadastro == 'erro'){%>
-    <div class=" alert alert-danger alert-dismissible fade show alertaTreinamento" id="alertaErro"
-      role="alert">
+  <% } else if(alertaCadastro == 'erro'){%>
+    <div class=" alert alert-danger alert-dismissible fade show alertaTreinamento" id="alertaErro" role="alert">
       Ocorreu um erro, tente novamente mais tarde!
-      <button type="button" class="btn-close" data-bs-dismiss="alert"
-        aria-label="Close"></button>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
   <% }%>
-  <%- include('rodape'); %>
+<%- include('rodape'); %>
